--- a/FinalProject.tex
+++ b/FinalProject.tex
@@ -6,6 +6,7 @@
 \usepackage{graphics,graphicx,epstopdf}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{float}
+\usepackage{hyperref}
 \setlength\parindent{0pt}
 
 \newcommand{\R}{\mathbb{R}}
@@ -30,7 +31,7 @@
 \bigskip
 
 % Abstract
-\abstract{Principal component analysis (PCA) and classification by supervised learning are two popular topics in data science today. In this article, we combine techniques from both areas in order to classify news articles based on their word frequency content. We find that we can accurately classify the data by projecting onto a small subset of principal components, reducing the feature space from nearly $10 \,000$ elements to just four. We also compare results from the traditional and robust PCA formulations, and discuss what additional semantic information can be inferred from our results.}
+\abstract{Principal component analysis (PCA) and classification by supervised learning are two popular topics in data science today. In this project, we combine techniques from both areas in order to classify news articles based on their word frequency content. We find that we can accurately classify the data by projecting onto a small subset of principal components, reducing the feature space from nearly $10 \,000$ elements to just four. We also compare results from the traditional and robust PCA formulations, and discuss what additional semantic information can be inferred from our results.}
 
 
 % Sec 1. Introduction and Overview
@@ -140,6 +141,8 @@ layers: input, hidden, output. We then train the network to minimize a cost func
 
 % App B. MATLAB codes
 \section*{Appendix B: MATLAB Codes}
+
+All of our code can be accessed {\color{blue}\href{https://github.com/kels271828/582FinalProject.git}{here}}.
 
 % App C. (optional) Any algebraically intense calculations (long and drawn out calculations that have no business in Sec 2)
 % \section{Appendix C}
